# dify-plugin

./: .gitignore  PRIVACY.md  README.md  _client.py  agent_prompt_v009.md  agent_prompt_v017.md  manifest.yaml  package.py  pyproject.toml  requirements.txt
openspec/changes/upgrade-daytona-agent-tools-v006/: design.md  proposal.md  tasks.md
openspec/changes/upgrade-daytona-agent-tools-v006/specs/daytona-sandbox-tools/: spec.md
openspec/changes/upgrade-daytona-agent-tools-v009/: design.md  proposal.md  tasks.md
openspec/changes/upgrade-daytona-agent-tools-v011/: design.md  proposal.md  tasks.md
openspec/changes/upgrade-daytona-agent-tools-v012/: design.md  proposal.md  tasks.md
openspec/changes/upgrade-daytona-agent-tools-v017/: design.md  proposal.md  tasks.md
provider/: daytona.py  daytona.yaml
tools/: archive_sandbox.py  archive_sandbox.yaml  auto_expose.py  auto_expose.yaml  create_sandbox.py  create_sandbox.yaml  destroy_sandbox.py  destroy_sandbox.yaml  download_file.py  download_file.yaml  find_in_files.py  find_in_files.yaml  get_preview_url.py  get_preview_url.yaml  get_service_logs.py  get_service_logs.yaml  git_clone.py  git_clone.yaml  list_files.py  list_files.yaml  list_sandboxes.py  list_sandboxes.yaml  manage_sandbox.py  manage_sandbox.yaml  read_file.py  read_file.yaml  run_code.py  run_code.yaml  run_command.py  run_command.yaml  search_files.py  search_files.yaml  start_sandbox.py  start_sandbox.yaml  start_service.py  start_service.yaml  stop_sandbox.py  stop_sandbox.yaml  upload_file.py  upload_file.yaml  (+2 more)
(+11 files in other folders)
